k8s/applications/web/mastodon/networking/svc-s3-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-s3-proxy
  namespace: mastodon
spec:
  type: ExternalName
  externalName: truenas.pc-tips.se
  ports:
    - name: https
      port: 9000
      targetPort: 9000
