k8s/applications/web/mastodon/networking/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon-s3
  namespace: mastodon
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - cdn.goingdark.social
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          method: GET
        - path:
            type: PathPrefix
            value: /
          method: HEAD
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: truenas.pc-tips.se
      backendRefs:
        - name: mastodon-s3-proxy
          port: 9000
